Made text clickable

--- a/index.html
+++ b/index.html
@@ -22,26 +22,25 @@
         <!-- navbar  -->
         <div class="navbar d-flex justify-content-between align-items-center">
           <div class="d-flex align-items-center">
-            <span>Seller Centre</span>
+            <span><a href="">Seller Centre</a></span>
             <div class="hr1 mx-2"></div>
-            <span>Start Selling</span>
+            <span><a href="">Start Selling</a></span>
             <div class="hr1 mx-2"></div>
-            <span>Download</span>
+            <span><a href="">Download</a></span>
             <div class="hr1 mx-2"></div>
             <span>ROLANDO</span>
 
           </div>
           <div class="d-flex align-items-center">
             <img class="media-icon mr-2" src="notif-icon.png" alt="" />
-            <span class="mr-4">Notification</span>
+            <span class="mr-4"><a href="">Notification</a></span>
             <img class="media-icon mr-2" src="help-icon.png" />
-            <span class="mr-4">Help</span>
-            <span class="font-weight-bold">Sign Up</span>
+            <span class="mr-4"><a href="">Help</a></span>
+            <span class="font-weight-bold"><a href="">Sign Up</a></span>
             <div class="hr1 mx-2"></div>
-            <span class="font-weight-bold">Login</span>
+            <span class="font-weight-bold"><a href="">Login</a></span>
           </div>
         </div>
-        <!-- input search brand -->
         <div class="d-flex align-items-center mt-4">
           <div class="d-flex align-items-center">
             <img class="shopee-logo mr-2" src="shopee-logo.png" alt="" />
@@ -58,16 +57,16 @@
               </div>
             </div>
             <div class="under-input d-flex mt-2">
-              <span class="mr-3">Sandals</span>
-              <span class="mr-3">Dress for women</span>
-              <span class="mr-3">Croptop</span>
-              <span class="mr-3">Bag</span>
-              <span class="mr-3">Shoes</span>
-              <span class="mr-3">Slippers for Women</span>
-              <span class="mr-3">Pants</span>
-              <span class="mr-3">Shorts for Men</span>
-              <span class="mr-3">Sandals for Women With Heels</span>
-              <span class="mr-3">Terno for Women</span>
+              <span class="mr-3"><a href="">Sandals</a></span>
+              <span class="mr-3"><a href="">Dress for women</a></span>
+              <span class="mr-3"><a href="">Croptop</a></span>
+              <span class="mr-3"><a href="">Bag</a></span>
+              <span class="mr-3"><a href="">Shoes</a></span>
+              <span class="mr-3"><a href="">Slippers for Women</a></span>
+              <span class="mr-3"><a href="">Pants</a></span>
+              <span class="mr-3"><a href="">Shorts for Men</a></span>
+              <span class="mr-3"><a href="">Sandals for Women With Heels</a></span>
+              <span class="mr-3"><a href="">Terno for Women</a></span>
             </div>
           </div>
           <img class="shopping-cart" src="shopee-cart.png" alt="" />
@@ -163,73 +162,71 @@
             </div>
           </div>
         </div>
-        <!-- jenis sale -->
         <div class="row mx-0 jenis-sale">
           <div class="d-flex justify-content-between w-100">
             <div class="d-flex flex-column align-items-center">
               <div class="wrap-img">
                 <img src="coins-reward.png" alt="" />
               </div>
-              <p class="mb-0 mt-2">Coins Rewards</p>
+              <p class="mb-0 mt-2"><a href="">Coins Rewards</a></p>
             </div>
             <div class="d-flex flex-column align-items-center">
               <div class="wrap-img">
                 <img src="free-shipping.png" alt="" />
               </div>
-              <p class="mb-0 mt-2">Free</p>
-              <p class="mb-0 text-center">Shipping</p>
+              <p class="mb-0 mt-2"><a href="">Free</p>
+              <p class="mb-0 text-center">Shipping</a></p>
             </div>
             <div class="d-flex flex-column align-items-center">
               <div class="wrap-img">
                 <img src="shopee-mall.png" alt="" />
               </div>
-              <p class="mb-0 mt-2">Shopee Mall</p>
+              <p class="mb-0 mt-2"><a href="">Shopee Mall</a></p>
             </div>
             <div class="d-flex flex-column align-items-center">
               <div class="wrap-img">
                 <img src="voucher-icon.png" alt="" />
               </div>
-              <p class="mb-0 mt-2">Vouchers</p>
+              <p class="mb-0 mt-2"><a href="">Vouchers</a></p>
             </div>
             <div class="d-flex flex-column align-items-center">
               <div class="wrap-img">
                 <img src="9-pesos.png" alt="" />
               </div>
-              <p class="mb-0 mt-2">As Low as ₱9
-</p>
+              <p class="mb-0 mt-2"><a href="">As Low as ₱9</a></p>
             </div>
             <div class="d-flex flex-column align-items-center">
               <div class="wrap-img">
                 <img src="shopee-beauty.png" alt="" />
               </div>
-              <p class="mb-0 mt-2">Shopee</p>
-              <p class="mb-0 text-center">Beauty</p>
+              <p class="mb-0 mt-2"><a href="">Shopee</p>
+              <p class="mb-0 text-center">Beauty</a></p>
             </div>
             <div class="d-flex flex-column align-items-center">
               <div class="wrap-img">
                 <img src="shopee-styles.png" alt="" />
               </div>
-              <p class="mb-0 mt-2">Shopee</p>
-              <p class="mb-0 text-center">Styles</p>
+              <p class="mb-0 mt-2"><a href="">Shopee</p>
+              <p class="mb-0 text-center">Styles</a></p>
             </div>
             <div class="d-flex flex-column align-items-center">
               <div class="wrap-img">
                 <img src="supermarket-icon.png" alt="" />
               </div>
-              <p class="mb-0 mt-2">Shopee</p>
-              <p class="mb-0 text-center">Supermarket</p>
+              <p class="mb-0 mt-2"><a href="">Shopee</p>
+              <p class="mb-0 text-center">Supermarket</a></p>
             </div>
             <div class="d-flex flex-column align-items-center">
               <div class="wrap-img">
                 <img src="gadget-zone.png" alt="" />
               </div>
-              <p class="mb-0 mt-2">Gadget Zone</p>
+              <p class="mb-0 mt-2"><a href="">Gadget Zone</a></p>
             </div>
             <div class="d-flex flex-column align-items-center">
               <div class="wrap-img">
                 <img src="partner-promos.png" alt="" />
               </div>
-              <p class="mb-0 mt-2">Partner Promos</p>
+              <p class="mb-0 mt-2"><a href="">Partner Promos</a></p>
             </div>
           </div>
         </div>
@@ -241,68 +238,68 @@
               <div class="wrap-img">
                 <img class="w-100 h-100" src="men-apparel-icon.png" alt="" />
               </div>
-              <p class="category-1">Men's Apparel</p>
+              <p class="category-1"><a href="">Men's Apparel</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="mobile-gadgets.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Mobile &</p>
-              <p class="mb-0 text-center">Gadgets</p>
+              <p class="mb-0 text-center mt-2"><a href="">Mobile &</p>
+              <p class="mb-0 text-center">Gadgets</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="mobile-accessories.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Mobile</p>
-              <p class="mb-0 text-center">Accessories</p>
+              <p class="mb-0 text-center mt-2"<a href="">Mobile</p>
+              <p class="mb-0 text-center">Accessories</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="home-entertainment.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Home</p>
-              <p class="mb-0 text-center">Entertainment</p>
+              <p class="mb-0 text-center mt-2"><a href="">Home</p>
+              <p class="mb-0 text-center">Entertainment</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="babies-entertainment.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Babies &</p>
-              <p class="mb-0 text-center">Kids</p>
+              <p class="mb-0 text-center mt-2"><a href="">Babies &</p>
+              <p class="mb-0 text-center">Kids</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="home-living.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Home &</p>
-              <p class="mb-0 text-center">Living</p>
+              <p class="mb-0 text-center mt-2"><a href="">Home &</p>
+              <p class="mb-0 text-center">Living</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="groceries-icon.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Groceries</p>
+              <p class="mb-0 text-center mt-2"><a href="">Groceries</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="collectibles-icon.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Toys, Games &</p>
-              <p class="mb-0 text-center">Collectibles</p>
+              <p class="mb-0 text-center mt-2"><a href="">Toys, Games &</p>
+              <p class="mb-0 text-center">Collectibles</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="women-bag.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Women's Bags</p>
+              <p class="mb-0 text-center mt-2"><a href="">Women's Bags</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="women-accessories.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Women</p>
-              <p class="mb-0 text-center">Accessories</p>
+              <p class="mb-0 text-center mt-2"><a href="">Women</p>
+              <p class="mb-0 text-center">Accessories</a></p>
             </div>
           </div>
           <div class="d-flex">
@@ -316,60 +313,60 @@
               <div class="wrap-img">
                 <img class="w-100 h-100" src="personal-care.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Health &</p>
-              <p class="mb-0 text-center">Personal Care</p>
+              <p class="mb-0 text-center mt-2"><a href="">Health &</p>
+              <p class="mb-0 text-center">Personal Care</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="makeup-icon.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Makeup &</p>
-              <p class="mb-0 text-center">Fragrances</p>
+              <p class="mb-0 text-center mt-2"><a href="">Makeup &</p>
+              <p class="mb-0 text-center">Fragrances</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="home-appliances.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Home</p>
-              <p class="mb-0 text-center">Appliances</p>
+              <p class="mb-0 text-center mt-2"><a href="">Home</p>
+              <p class="mb-0 text-center">Appliances</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="laptops-computers.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Laptop &</p>
-              <p class="mb-0 text-center">Computers</p>
+              <p class="mb-0 text-center mt-2"><a href="">Laptop &</p>
+              <p class="mb-0 text-center">Computers</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="camera-icon.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Cameras</p>
+              <p class="mb-0 text-center mt-2"><a href="">Cameras</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="sport-travel.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Sports & Travel</p>
+              <p class="mb-0 text-center mt-2"><a href="">Sports & Travel</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="men-accessories.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Men's Bags &</p>
-              <p class="mb-0 text-center">Accessories</p>
+              <p class="mb-0 text-center mt-2"><a href="">Men's Bags &</p>
+              <p class="mb-0 text-center">Accessories</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="men-shoes.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Men's Shoes</p>
+              <p class="mb-0 text-center mt-2"><a href="">Men's Shoes</a></p>
             </div>
             <div class="d-flex flex-column align-items-center card-category">
               <div class="wrap-img">
                 <img class="w-100 h-100" src="motors.png" alt="" />
               </div>
-              <p class="mb-0 text-center mt-2">Motors</p>
+              <p class="mb-0 text-center mt-2"><a href="">Motors</a></p>
             </div>
           </div>
         </div>
