--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    <link     rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     />
@@ -19,7 +17,6 @@
   <body>
     <div class="hr">
       <div class="container">
-        <!-- navbar  -->
         <div class="navbar d-flex justify-content-between align-items-center">
           <div class="d-flex align-items-center">
             <span><a href="">Seller Centre</a></span>
@@ -43,7 +40,7 @@
         </div>
         <div class="d-flex align-items-center mt-4">
           <div class="d-flex align-items-center">
-            <img class="shopee-logo mr-2" src="shopee-logo.png" alt="" />
+            <a href="https://shopee.ph/?gad_source=1&gclid=CjwKCAiAvdCrBhBREiwAX6-6UpuOi7jYRhySVFWR4L9a2MA4-yEq7AmvCmFdCtuxpmJjVKVerjSEPxoC3HwQAvD_BwE"><img class="shopee-logo mr-2" src="shopee-logo.png" alt="" /></a>
           </div>
           <div class="wrap-navbar-input">
             <div class="wrap-search">
